src/App.css
/* ... */
.language-button {
  position: absolute;
  top: 12px;
  left: 15px;
  z-index: 1;
}
.login-link {
  position: absolute;
  left: 127px;
  top: 19px;
  color: #fff;
  z-index: 1;
  cursor: pointer;
}
.custom-modal{}
.custom-modal .form-label {
  color: #6c757d;
  font-size: 14px;
  margin-bottom: 2px;
  text-align: left;
}
.custom-modal .form-control {
  margin: 0;
  text-align: left;
}
.custom-modal .modal-title {
  text-align: center;
  color: #6c757d;
  margin-bottom: 20px;
  font-weight: 400;
  font-size: 1.3rem;
}
.custom-modal .modal-header {
  padding: 0;
  border: none;
  position: absolute;
  left: 10px;
  top: 15px;
  z-index: 9;
}
.custom-modal .modal-header .btn-close,
.custom-modal .modal-header .btn-close:hover {
  padding: 0 !important;
}
.custom-modal .modal-body {
  padding: 40px;
}
.custom-modal .btn {
  display: block;
  margin-left: auto;
  margin-right: auto;
  font-weight: 700;
  padding: 0.5rem 1.3rem;
}
.custom-modal .modal-dialog {
  max-width: 380px;
}
.custom-modal .form-link {
  cursor: pointer;
}
.custom-modal .btn-close:focus{
  box-shadow: none;
}
.custom-modal .modal-logo img {
  max-width: 150px;
  margin-bottom: 20px;
}
.custom-modal .btn-solid {
  background-color: transparent !important;
  border: 1px solid var(--primary_color);
  color: var(--primary_color) !important;
  font-weight: 400;
  font-family: "Almarai", sans-serif;
  font-size: 18px;
}
.custom-modal .modal-content {
  background-color: #f7f9fa;
}
.custom-modal .form-select {
  font-size: 1rem;
  font-weight: 400;
  min-height: 50px;
}
.modal-register .modal-dialog {
  max-width: 550px;
}

.react-datepicker-wrapper input {
  display: block;
  width: 100%;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #212529;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  appearance: none;
  border-radius: 0.375rem;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  min-height: 50px;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none; 
}

.tabs-menu .nav-tabs {
  border-bottom: none !important;
}
.tabs-menu .nav-link {
  color: #495057 !important;
  border: none !important;
}
.tabs-menu .nav-link.active {
  color: #3e0292 !important;
  border-bottom: 1px solid #3e0292 !important;
}
.btn-primary {
  background-color: var(--primary_color) !important;
  color: #fff !important;
}
.App-en .main_screen label {
  text-align: left !important;
}
.App-en .section-gray .filter-title {
  text-align: left !important;
}
.App-en .section-gray input {
  text-align: left !important;
}
.App-en .section-gray 
input[type=checkbox]+label:before, input[type=radio]+label:before {
  left: unset !important;
  right: 0 !important;
}
.App-en .section-gray input[type=checkbox]+label, input[type=radio]+label {
  padding-right: 25px !important;
  padding-left: 0 !important;
  text-align: left !important;
}
.App-en header img {
  margin-left: auto !important;
}
.App-en header .logo-row {
  flex-direction: row-reverse !important;
}
.App-en .section-gray .subscribe {
  text-align: end;
}
.App-en .section-gray .search_hint {
  text-align: start;
}
.App-en .section-gray .search_tags li span {
  float: revert;
}
.App-en .section-gray .search_hint .dropdown .dropdown-item {
  text-align: start;
}
.App-en .section-gray .search_hint .dropdown .dropdown-item {
  text-align: start;
}
.App-en .car_item .car_cont .bottom .price {
  text-align: start;
}
.App-en .car_item .car_details {
  text-align: start;
}
.App-en .car_item .report_btn {
  float: right;
  margin-right: 10px;
}
.App-en .car_item .tags {
  padding-left: 0 !important;
}
.subscribe-modal-en .modal-title {
  margin-left: unset !important;
}
.subscribe-modal-en .tabs-menu .nav-tabs {
  flex-direction: row-reverse;
}
.subscribe-modal-en .Tab-inner {
  display: flex;
  flex-direction: row-reverse;
}
.subscribe-modal-en .tabs-menu .nav-tabs {
  justify-content: start;
}
.subscribe-modal-en  label {
  text-align: left !important;
}
.subscribe-modal-en  input {
  text-align: left !important;
}

.float-en {
	position:absolute !important;
	bottom:40px;
	right:40px;
	color:#FFF;
	text-align:center;
	box-shadow: 2px 2px 3px #999;
}
.float-ar {
	position:absolute !important;
	bottom:40px;
	left:40px;
	color:#FFF;
	text-align:center;
	box-shadow: 2px 2px 3px #999;
}

.paper-en {
  width: 500px;
  margin-right: 50px;
  margin-bottom: 10px;
}
.paper-ar {
  width: 500px;
  margin-left: 50px;
  margin-bottom: 10px;
}

::-webkit-scrollbar {
  display: none;
}

.basic-multi-select img {
  width: 30px !important;
  height: 30px !important;
}
.report-flag {
  color: grey;
}
   
.report-flag:hover {
  color: red;
}


.dropdown_icon_en{
  position: relative;
  float: right;
  margin-top: 30px;
  left: -79px
}
.dropdown_itam_flag{
  padding: 0px !important;
  min-width: 0px !important;
}
.dropdown_icon_ar{
  position: relative;
  float: left;
  right: -79px;
  margin-top: 30px;
}
.three_dot_icon{
position: relative;
font-size: 20px;
width: 30px;
float: right;
padding-left: 10px;
left: 0;
right: 92%;
}
.scroll-btn {
  position: fixed; 
   width: 100%;
   left: 50%;
   bottom: 120px;
   height: 20px;
   font-size: 3rem;
   z-index: 1;
   cursor: pointer;
   color: #00CEBD;
}

.sources_img_main{
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
}
.source_img{
  width: 70px;
  height: 70px;
  border-radius: 50px;
  padding: 10px;
}

